Add optional dependencies to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,7 @@ trees = "pedigree_package.main:main"
 
 [tool.setuptools.packages.find]
 where = "src"
+
+[project.optional-dependencies]
+benchmark = ["scikit-learn"]
+plot = ["pygraphviz"]
