Fix location of command line script

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
 ]
 
 [project.scripts]
-trees = "pedigree_package.reconstruct.main:main"
+trees = "pedigree_package.main:main"
 
 [tool.setuptools.packages.find]
 where = ["src"]
