--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,10 @@
+[build-system]
+requires = ["setuptools>=64", "setuptools-scm>=8"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "pedigree_package"
-version = "0.0.1"
+dynamic = ["version"]
 dependencies = [
     "pandas",
     "networkx",
@@ -8,12 +12,14 @@ dependencies = [
     "matplotlib",
 ]
 
+[project.optional-dependencies]
+benchmark = ["scikit-learn", "seaborn"]
+plot = ["pygraphviz"]
+
 [project.scripts]
 trees = "pedigree_package.main:main"
 
 [tool.setuptools.packages.find]
 where = ["src"]
 
-[project.optional-dependencies]
-benchmark = ["scikit-learn", "seaborn"]
-plot = ["pygraphviz"]
+[tool.setuptools_scm]
