--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,14 @@ line-length = 120
 
 [tool.ruff.lint]
 select = [
+    # pycodestyle
+    "E",
+    # Pyflakes
+    "F",
+    # pyupgrade
+    "UP",
+    # flake8-bugbear
+    "B",
     # isort
     "I",
 ]
