--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=64", "setuptools-scm>=8"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "pedigree_package"
+name = "repare"
 dynamic = ["version"]
 dependencies = [
     "pandas",
@@ -17,7 +17,7 @@ benchmark = ["scikit-learn", "seaborn"]
 plot = ["pygraphviz"]
 
 [project.scripts]
-trees = "pedigree_package.main:main"
+repare = "repare.main:main"
 
 [tool.setuptools.packages.find]
 where = ["src"]
