--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,3 +48,26 @@ select = [
     # isort
     "I",
 ]
+
+[tool.pixi.workspace]
+channels = ["conda-forge"]
+platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]
+
+[tool.pixi.pypi-dependencies]
+repare = { path = ".", editable = true }
+
+[tool.pixi.environments]
+default = { features = ["benchmark", "plot"], solve-group = "default" }
+benchmark = { features = ["benchmark"], solve-group = "default" }
+plot = { features = ["plot"], solve-group = "default" }
+
+[tool.pixi.tasks]
+
+[tool.pixi.dependencies]
+matplotlib = ">=3.10.3,<4"
+networkx = ">=3.5,<4"
+pandas = ">=2.3.1,<3"
+tqdm = ">=4.67.1,<5"
+scikit-learn = ">=1.7.1,<2"
+seaborn = ">=0.13.2,<0.14"
+pygraphviz = ">=1.14,<2"
