--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,7 @@ tqdm = ">=4.67.1,<5"
 scikit-learn = ">=1.7.2,<2"
 seaborn = ">=0.13.2,<0.14"
 pygraphviz = ">=1.14,<2"
+python = ">=3.10,<=3.13"
 
 [tool.pytest.ini_options]
 pythonpath = [
